--- a/game20.html
+++ b/game20.html
@@ -110,7 +110,7 @@
 
                 // Step 3: Train with seismic_texture.jpg
                 const image = document.createElement('img');
-                image.src = 'seismic_texture.jpg';
+                image.src = 'seismic_texture.jpeg';
                 await new Promise(resolve => (image.onload = resolve));
                 statusPanel.textContent = 'Loading model (90%)...';
 
