--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="game-category">
                 <h3>2D Games</h3>
                 <ul class="game-list">
-                    <li>🌍 <a href="game1.html">Rocks Fall Down</a></li>
+                    <li>🌍 <a href="game21.html">Wedge Model Of Geology Geometries</a></li>
                     <li>🌍 <a href="game2.html">Weather Chaos</a></li>
                     <li>🌍 <a href="game3.html">Environmental Disaster</a></li>
                     <li>🌍 <a href="game15.html">Reservoirs Migration Simulation</a></li>
