--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                     <li>🔥 <a href="game4.html">Tension and Compression </a></li>
                     <li>🌡️ <a href="game7.html">Directional Explorer</a></li>
                     <li>🌡️ <a href="game23.html">Geology Geometry Explorer</a></li>
-                    <li>🌡️ <a href="geofaultseal.html">Geology Fault Seal Simulation</a></li>
-                    <li>🌡️ <a href="geofaultseal2.html">Geology Fault Seal Explorer</a></li>
+                    <li>🌡️ <a href="geofaultseal2.html">Geology Fault Seal Simulation</a></li>
+                    <li>🌡️ <a href="geofaultseal.html">Geology Fault Seal Reservoir</a></li>
                     
                 </ul>
             </div>
