--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <li>🌡️ <a href="game23.html">Geology Geometry Explorer</a></li>
                     <li>🌡️ <a href="geofaultseal2.html">Geology Fault Seal Simulation</a></li>
                     <li>🌡️ <a href="geofaultseal.html">Geology Fault Seal Reservoir</a></li>
-                    
+                    <li>🌡️ <a href="geofaultseal3.html">Geology Fault Seal Fluid Flow</a></li>
                 </ul>
             </div>
 
