--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
             <div class="game-category">
                 <h3>2D Games</h3>
                 <ul class="game-list">
+                    <li>🌍 <a href="geoearthcore1.html">Earth Core Matle Simulation</a></li>
                     <li>🌍 <a href="game21.html">Tectonic Formation Simulation</a></li>
                     <li>🌍 <a href="game2.html">Weather Chaos</a></li>
                     <li>🌍 <a href="game3.html">Environmental Disaster</a></li>
