--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                 <h3>2D Games</h3>
                 <ul class="game-list">
                     <li>🌍 <a href="geoearthcore1.html">Earth Core Simulation</a></li>
+                    <li>🌍 <a href="geoearthquake1.html">Earth Subduction Simulation</a></li>
+                    <li>🌍 <a href="geoearthquake2.html">Indonesia Earth Quake Simulation</a></li>
                     <li>🌍 <a href="game21.html">Tectonic Formation Simulation</a></li>
                     <li>🌍 <a href="game2.html">Weather Chaos</a></li>
                     <li>🌍 <a href="game3.html">Environmental Disaster</a></li>
