--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                     <li>🌡️ <a href="geofaultseal2.html">Geology Fault Seal Simulation</a></li>
                     <li>🌡️ <a href="geofaultseal.html">Geology Fault Seal Reservoir</a></li>
                     <li>🌡️ <a href="geofaultseal3.html">Geology Fault Seal Fluid Flow</a></li>
+                    <li>🌡️ <a href="geophyseismic1.html">Geophysics  Seismic Section</a></li>
                     <li>🌡️ <a href="geophycrossplot1.html">Geophysics Crossplot For Reservoirs</a></li>
                 </ul>
             </div>
