--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                     <li>🏠 <a href="game11.html">Energy Fusion</a></li>
                     <li>🏠 <a href="game12.html">Velocity </a></li>
                     <li>🏠 <a href="game13.html">Vulcanos</a></li>
+                    <li>🏠 <a href="fracmatics.html">fractal cymaticz</a></li>
                         
                 </ul>
             </div>
