--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                     <li>🏠 <a href="game12.html">Velocity </a></li>
                     <li>🏠 <a href="game13.html">Vulcanos</a></li>
                     <li>🏠 <a href="fracmatics.html">fractal cymaticz</a></li>
+                    <li>🏠 <a href="cyfractal.html"> cymaticz fractal </a></li>
                         
                 </ul>
             </div>
