--- a/cyfractal.html
+++ b/cyfractal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cymatics with Fractal Edges</title>
+  <title>Fractals with Cymatics Fragmentation</title>
   <style>
     body {
       margin: 0;
@@ -32,15 +32,16 @@
   </style>
 </head>
 <body>
-  <canvas id="cymaticsCanvas"></canvas>
+  <canvas id="canvas"></canvas>
   <div id="controls">
     <label>Frequency: <input type="range" id="frequency" min="1" max="20" step="0.1" value="5"></label>
     <label>Amplitude: <input type="range" id="amplitude" min="1" max="10" step="0.1" value="5"></label>
     <label>Fractal Depth: <input type="range" id="fractalDepth" min="50" max="500" step="10" value="200"></label>
+    <label>Split Speed: <input type="range" id="splitSpeed" min="0.1" max="2" step="0.1" value="1"></label>
   </div>
 
   <script>
-    const canvas = document.getElementById("cymaticsCanvas");
+    const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
@@ -48,37 +49,39 @@
     const frequencySlider = document.getElementById("frequency");
     const amplitudeSlider = document.getElementById("amplitude");
     const fractalDepthSlider = document.getElementById("fractalDepth");
+    const splitSpeedSlider = document.getElementById("splitSpeed");
 
     function map(value, inMin, inMax, outMin, outMax) {
       return ((value - inMin) * (outMax - outMin)) / (inMax - inMin) + outMin;
     }
 
-    function generateCymaticsWithFractalEdges(time) {
+    function generateFractalCymatics(time) {
       const width = canvas.width;
       const height = canvas.height;
 
       const frequency = parseFloat(frequencySlider.value);
       const amplitude = parseFloat(amplitudeSlider.value);
       const fractalDepth = parseInt(fractalDepthSlider.value);
+      const splitSpeed = parseFloat(splitSpeedSlider.value);
 
       const centerX = width / 2;
       const centerY = height / 2;
 
-      const imageData = ctx.createImageData(width, height);
-      const data = imageData.data;
+      ctx.clearRect(0, 0, width, height);
 
       for (let x = 0; x < width; x++) {
         for (let y = 0; y < height; y++) {
-          // Cymatics pattern (concentric standing waves)
+          // Cymatics standing wave
           const dx = x - centerX;
           const dy = y - centerY;
           const distance = Math.sqrt(dx * dx + dy * dy);
           const wave = Math.sin(frequency * distance * 0.01 - time) * amplitude;
 
-          // Fractal edge decoration
+          // Fractal modulation with splitting effect
           let zx = map(dx, -width / 2, width / 2, -2, 2);
           let zy = map(dy, -height / 2, height / 2, -2, 2);
-          const cx = zx, cy = zy;
+          const cx = zx * Math.sin(splitSpeed * time);
+          const cy = zy * Math.cos(splitSpeed * time);
 
           let iteration = 0;
           while (zx * zx + zy * zy < 4 && iteration < fractalDepth) {
@@ -93,22 +96,18 @@
 
           // Map to RGB color
           const colorValue = map(modulatedValue, 0, fractalDepth, 0, 255);
-          const pixelIndex = (x + y * width) * 4;
 
-          data[pixelIndex] = colorValue; // Red
-          data[pixelIndex + 1] = 255 - colorValue; // Green
-          data[pixelIndex + 2] = colorValue * 0.5; // Blue
-          data[pixelIndex + 3] = 255; // Alpha
+          // Set pixel color
+          ctx.fillStyle = `rgb(${colorValue}, ${255 - colorValue}, ${colorValue * 0.5})`;
+          ctx.fillRect(x, y, 1, 1);
         }
       }
-
-      ctx.putImageData(imageData, 0, 0);
     }
 
     let time = 0;
     function animate() {
       time += 0.05;
-      generateCymaticsWithFractalEdges(time);
+      generateFractalCymatics(time);
       requestAnimationFrame(animate);
     }
 
