--- a/cyfractal.html
+++ b/cyfractal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fractals Splitting with Cymatics</title>
+  <title>Cymatics Fractals</title>
   <style>
     body {
       margin: 0;
@@ -32,15 +32,14 @@
   <div id="controls">
     <label for="fractalAlgorithm">Fractal Algorithm:</label>
     <select id="fractalAlgorithm">
-      <option value="mandelbrot">Mandelbrot</option>
       <option value="julia">Julia</option>
+      <option value="mandelbrot">Mandelbrot</option>
       <option value="burningShip">Burning Ship</option>
       <option value="tricorn">Tricorn</option>
     </select>
     <label>Frequency: <input type="range" id="frequency" min="1" max="20" step="0.1" value="5"></label>
     <label>Amplitude: <input type="range" id="amplitude" min="1" max="10" step="0.1" value="5"></label>
-    <label>Fractal Depth: <input type="range" id="fractalDepth" min="50" max="500" step="10" value="200"></label>
-    <label>Split Speed: <input type="range" id="splitSpeed" min="0.1" max="2" step="0.1" value="1"></label>
+    <label>Particle Speed: <input type="range" id="speed" min="0.1" max="2" step="0.1" value="1"></label>
   </div>
 
   <script>
@@ -52,91 +51,94 @@
     const fractalAlgorithmSelect = document.getElementById("fractalAlgorithm");
     const frequencySlider = document.getElementById("frequency");
     const amplitudeSlider = document.getElementById("amplitude");
-    const fractalDepthSlider = document.getElementById("fractalDepth");
-    const splitSpeedSlider = document.getElementById("splitSpeed");
+    const speedSlider = document.getElementById("speed");
 
-    function map(value, inMin, inMax, outMin, outMax) {
-      return ((value - inMin) * (outMax - outMin)) / (inMax - inMin) + outMin;
+    const particles = [];
+    const maxParticles = 5000;
+    const centerX = canvas.width / 2;
+    const centerY = canvas.height / 2;
+
+    function createParticle(x, y, color) {
+      return { x, y, vx: 0, vy: 0, color };
     }
 
-    function generateFractalCymatics(time) {
-      const width = canvas.width;
-      const height = canvas.height;
-
-      const frequency = parseFloat(frequencySlider.value);
-      const amplitude = parseFloat(amplitudeSlider.value);
-      const fractalDepth = parseInt(fractalDepthSlider.value);
-      const splitSpeed = parseFloat(splitSpeedSlider.value);
-      const fractalAlgorithm = fractalAlgorithmSelect.value;
-
-      const centerX = width / 2;
-      const centerY = height / 2;
-
-      ctx.clearRect(0, 0, width, height);
-
-      for (let x = 0; x < width; x++) {
-        for (let y = 0; y < height; y++) {
-          const dx = x - centerX;
-          const dy = y - centerY;
-          const distance = Math.sqrt(dx * dx + dy * dy);
-          const wave = Math.sin(frequency * distance * 0.01 - time) * amplitude;
-
-          let zx, zy, cx, cy;
-
-          switch (fractalAlgorithm) {
-            case "mandelbrot":
-              zx = map(dx, -width / 2, width / 2, -2, 2);
-              zy = map(dy, -height / 2, height / 2, -2, 2);
-              cx = zx + Math.cos(splitSpeed * time) * wave;
-              cy = zy + Math.sin(splitSpeed * time) * wave;
-              break;
-
-            case "julia":
-              zx = map(dx, -width / 2, width / 2, -2, 2);
-              zy = map(dy, -height / 2, height / 2, -2, 2);
-              cx = Math.cos(splitSpeed * time) + wave;
-              cy = Math.sin(splitSpeed * time) + wave;
-              break;
-
-            case "burningShip":
-              zx = Math.abs(map(dx, -width / 2, width / 2, -2, 2));
-              zy = Math.abs(map(dy, -height / 2, height / 2, -2, 2));
-              cx = zx + Math.cos(splitSpeed * time) * wave;
-              cy = zy + Math.sin(splitSpeed * time) * wave;
-              break;
-
-            case "tricorn":
-              zx = map(dx, -width / 2, width / 2, -2, 2);
-              zy = -map(dy, -height / 2, height / 2, -2, 2);
-              cx = zx + Math.sin(splitSpeed * time) * wave;
-              cy = zy - Math.cos(splitSpeed * time) * wave;
-              break;
-          }
-
-          let iteration = 0;
-          while (zx * zx + zy * zy < 4 && iteration < fractalDepth) {
-            const temp = zx * zx - zy * zy + cx;
-            zy = 2 * zx * zy + cy;
-            zx = temp;
-            iteration++;
-          }
-
-          const modulatedValue = iteration * Math.abs(wave);
-          const colorValue = map(modulatedValue, 0, fractalDepth, 0, 255);
-
-          ctx.fillStyle = `rgb(${colorValue}, ${255 - colorValue}, ${colorValue * 0.5})`;
-          ctx.fillRect(x, y, 1, 1);
-        }
+    function generateParticles() {
+      for (let i = 0; i < maxParticles; i++) {
+        particles.push(createParticle(centerX, centerY, { r: 255, g: 255, b: 255 }));
       }
     }
 
-    let time = 0;
+    function updateParticles(time) {
+      const frequency = parseFloat(frequencySlider.value);
+      const amplitude = parseFloat(amplitudeSlider.value);
+      const speed = parseFloat(speedSlider.value);
+      const fractalAlgorithm = fractalAlgorithmSelect.value;
+
+      for (const particle of particles) {
+        const dx = particle.x - centerX;
+        const dy = particle.y - centerY;
+        const distance = Math.sqrt(dx * dx + dy * dy);
+
+        // Cymatics wave motion
+        const wave = Math.sin(frequency * distance * 0.01 - time) * amplitude;
+
+        // Fractal behavior
+        let fx, fy;
+        switch (fractalAlgorithm) {
+          case "julia":
+            fx = Math.cos(speed * time + wave);
+            fy = Math.sin(speed * time + wave);
+            break;
+          case "mandelbrot":
+            fx = Math.sin(speed * time - wave);
+            fy = Math.cos(speed * time - wave);
+            break;
+          case "burningShip":
+            fx = Math.abs(Math.sin(speed * time + wave));
+            fy = Math.abs(Math.cos(speed * time - wave));
+            break;
+          case "tricorn":
+            fx = Math.sin(speed * time + wave);
+            fy = -Math.cos(speed * time - wave);
+            break;
+        }
+
+        particle.vx += fx * 0.1;
+        particle.vy += fy * 0.1;
+        particle.x += particle.vx * speed;
+        particle.y += particle.vy * speed;
+
+        // Bounce at boundaries
+        if (particle.x < 0 || particle.x > canvas.width) particle.vx *= -1;
+        if (particle.y < 0 || particle.y > canvas.height) particle.vy *= -1;
+
+        // RGB blending
+        const overlap = Math.abs(particle.vx) + Math.abs(particle.vy);
+        particle.color.r = Math.min(255, particle.color.r + overlap);
+        particle.color.g = Math.max(0, particle.color.g - overlap);
+        particle.color.b = Math.max(0, particle.color.b - overlap);
+      }
+    }
+
+    function drawParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      for (const particle of particles) {
+        ctx.fillStyle = `rgb(${particle.color.r}, ${particle.color.g}, ${particle.color.b})`;
+        ctx.beginPath();
+        ctx.arc(particle.x, particle.y, 2, 0, Math.PI * 2);
+        ctx.fill();
+      }
+    }
+
     function animate() {
-      time += 0.05;
-      generateFractalCymatics(time);
+      const time = performance.now() * 0.001;
+      updateParticles(time);
+      drawParticles();
       requestAnimationFrame(animate);
     }
 
+    generateParticles();
     animate();
   </script>
 </body>
