--- a/cyfractal.html
+++ b/cyfractal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cymatics Fractals with Energy Dissipation</title>
+  <title>Cymatics Fractal Simulation</title>
   <style>
     body {
       margin: 0;
@@ -58,14 +58,21 @@
     const resetButton = document.getElementById("resetButton");
 
     let particles = [];
-    const gridRows = 32; // Rows of particles
-    const gridCols = 32; // Columns of particles
+    const gridRows = 32;
+    const gridCols = 32;
     const centerX = canvas.width / 2;
     const centerY = canvas.height / 2;
     let isRunning = false;
 
-    function createParticle(x, y, color) {
-      return { x, y, vx: 0, vy: 0, energy: 1, color };
+    function createParticle(x, y) {
+      return {
+        x,
+        y,
+        vx: 0,
+        vy: 0,
+        energy: 1,
+        color: { r: 255, g: 255, b: 255 },
+      };
     }
 
     function generateParticles() {
@@ -77,7 +84,7 @@
         for (let j = 0; j < gridCols; j++) {
           const x = j * spacingX + spacingX / 2;
           const y = i * spacingY + spacingY / 2;
-          particles.push(createParticle(x, y, { r: 255, g: 255, b: 255 }));
+          particles.push(createParticle(x, y));
         }
       }
     }
@@ -88,7 +95,7 @@
       const speed = parseFloat(speedSlider.value);
       const fractalAlgorithm = fractalAlgorithmSelect.value;
 
-      for (const particle of particles) {
+      for (let particle of particles) {
         if (particle.energy <= 0) continue;
 
         const dx = particle.x - centerX;
@@ -96,9 +103,9 @@
         const distance = Math.sqrt(dx * dx + dy * dy);
 
         // Cymatics wave motion
-        const wave = Math.sin(frequency * distance * 0.01 - time) * amplitude * particle.energy;
+        const wave = Math.sin(frequency * distance * 0.01 - time) * amplitude;
 
-        // Fractal behavior
+        // Fractal motion
         let fx, fy;
         switch (fractalAlgorithm) {
           case "julia":
@@ -125,25 +132,30 @@
         particle.y += particle.vy * speed;
 
         // Energy dissipation
-        particle.energy -= 0.002; // Gradual energy decay
+        particle.energy -= 0.002;
 
-        // Bounce at boundaries
+        // RGB Blending
+        for (const other of particles) {
+          const distance = Math.sqrt((particle.x - other.x) ** 2 + (particle.y - other.y) ** 2);
+          if (distance < 5) {
+            particle.color.r = (particle.color.r + other.color.r) / 2;
+            particle.color.g = (particle.color.g + other.color.g) / 2;
+            particle.color.b = (particle.color.b + other.color.b) / 2;
+          }
+        }
+
+        // Boundary bounce
         if (particle.x < 0 || particle.x > canvas.width) particle.vx *= -1;
         if (particle.y < 0 || particle.y > canvas.height) particle.vy *= -1;
-
-        // RGB blending
-        const overlap = Math.abs(particle.vx) + Math.abs(particle.vy);
-        particle.color.r = Math.min(255, particle.color.r + overlap);
-        particle.color.g = Math.max(0, particle.color.g - overlap);
-        particle.color.b = Math.max(0, particle.color.b - overlap);
       }
     }
 
     function drawParticles() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      for (const particle of particles) {
-        ctx.fillStyle = `rgb(${particle.color.r}, ${particle.color.g}, ${particle.color.b})`;
+      for (let particle of particles) {
+        const { r, g, b } = particle.color;
+        ctx.fillStyle = `rgb(${r}, ${g}, ${b})`;
         ctx.beginPath();
         ctx.arc(particle.x, particle.y, 3, 0, Math.PI * 2);
         ctx.fill();
